# plexichat

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci-with-tests.yml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTINUE_IMPLEMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TESTING_QUICK_REFERENCE.md  TEST_VALIDATION_CHECKLIST.md  TEST_VERIFICATION_SUMMARY.md  TYPE_CHECK_GUIDE.md  TYPE_CHECK_README.md  TYPE_FIXES_SUMMARY.md  TYPE_VERIFICATION_REPORT.md  api_reference.md  ci_test_verification.py  config.yaml  conftest.py  db_failures.txt  docker-compose.yml  failures.txt  failures_round_2.txt  failures_round_3.txt  failures_round_4.txt  failures_round_5.txt  gitlab-ci-with-tests.yml  gitlab-ci.yml  main.py  new_failures.txt  non_existent.yaml  pyproject.toml  (+15 more)
docs/: index.md  (+37 more)
src/utils/common-utils/: .gitignore  __init__.py  pyproject.toml  writing_utils.md
src/utils/common-utils/tests/: README.md
src/utils/common-utils/tests/config/: README.md  __init__.py
src/utils/common-utils/tests/integration/: README.md  __init__.py  main.py  script2.py
src/utils/common-utils/tests/licensing/: __init__.py  test_api.py  test_core.py
src/utils/common-utils/tests/logger/: README.md  test_sanitizer.py
src/utils/common-utils/tests/validator/: __init__.py  (+1 more)
src/utils/common-utils/utils/: README.md
src/utils/common_utils/: LICENSE  README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  writing_utils.md
src/utils/common_utils/tests/: README.md
src/utils/common_utils/utils/: README.md  __init__.py
(+1779 files in other folders)
