[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-utils"
version = "0.1.0"
description = "Common utilities for Python projects"
authors = [{name = "User", email = "user@example.com"}]
packages = ["utils"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
